--- a/.github/workflows/nightly-run.yml
+++ b/.github/workflows/nightly-run.yml
@@ -28,4 +28,5 @@ jobs:
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
           RECIPIENT: ${{ secrets.RECIPIENT }}
-        run: python alpha_scorer.py
+        run: python test_secrets.py
+
